--- a/app/main_admin.html
+++ b/app/main_admin.html
@@ -13,7 +13,7 @@ engine: ejs
             </span><strong>Add New Admin</strong></a>
         </div>   
         <div class="search_and_alart d-flex align-items-center d-grid gap-4">
-            <a href=""><span class="material-icons ">
+            <a href="#"><span class="material-icons ">
                 search
                 </span>
             </a>
