--- a/app/main-assignment.html
+++ b/app/main-assignment.html
@@ -38,7 +38,7 @@ engine: ejs
     <div class="assigntable container d-flex d-grid gap-3 ">
             <div class=" col-5 chapter_summary card rounded-1 border-0">
                 <div class="  list-group " id="list-tab" role="tablist">
-                    <a id="list-firstGroup-list" data-bs-toggle="list" href="#list-firstGuoup" role="tab" aria-controls="list-firstGuoup"class="list-group-item list-group-item-action for_preventDefault active link-secondary">
+                    <a id="list-firstGroup-list" data-bs-toggle="list" href="#list-firstGuoup" role="tab" aria-controls="list-firstGuoup"class="list-group-item list-group-item-action  active  border">
                         <div class="ch_and_time d-flex justify-content-between">
                             <h3>Chapter Assignment2</h3>
                             <sapn>4 hrs ago</sapn>
@@ -48,7 +48,7 @@ engine: ejs
                             <span>Emily Wang</span>
                         </div>
                     </a>
-                    <a  id="list-secondGroup-list" data-bs-toggle="list" href="#list-secondGroup" role="tab" aria-controls="list-secondGroup"class="list-group-item list-group-item-action for_preventDefault link-secondary">
+                    <a  id="list-secondGroup-list" data-bs-toggle="list" href="#list-secondGroup" role="tab" aria-controls="list-secondGroup"class="list-group-item list-group-item-action   border">
                         <div class="ch_and_time d-flex justify-content-between">
                         <h3>Emily Wang</h3>
                         <sapn>Emily Wang</sapn>
@@ -58,7 +58,7 @@ engine: ejs
                         <span>My Homework</span>
                     </div>
                     </a>
-                    <a id="list-thirdGroup-list" data-bs-toggle="list" href="#list-thirdGroup" role="tab" aria-controls="list-thirdGroup" class="list-group-item list-group-item-action for_preventDefault link-secondary">
+                    <a id="list-thirdGroup-list" data-bs-toggle="list" href="#list-thirdGroup" role="tab" aria-controls="list-thirdGroup" class="list-group-item list-group-item-action   border">
                         <div class="ch_and_time d-flex justify-content-between">
                         <h3>Final Assignment</h3>
                         <sapn>Final Assignment</sapn>
@@ -68,7 +68,7 @@ engine: ejs
                         <span>Tony Wei</span>
                     </div>
                     </a>
-                    <a id="list-fourthGroup-list" data-bs-toggle="list" href="#list-fourthGroup" role="tab" aria-controls="list-fourthGroup" class="list-group-item list-group-item-action for_preventDefault link-secondary"><div class="ch_and_time d-flex justify-content-between">
+                    <a id="list-fourthGroup-list" data-bs-toggle="list" href="#list-fourthGroup" role="tab" aria-controls="list-fourthGroup" class="list-group-item list-group-item-action   border "><div class="ch_and_time d-flex justify-content-between">
                         <h3>Final Assignment</h3>
                         <sapn>Final Assignment</sapn>
                     </div>
@@ -77,7 +77,7 @@ engine: ejs
                         <span>Tony Wei</span>
                     </div>
                     </a>
-                    <a id="list-fifthdGroup-list" data-bs-toggle="list" href="#list-fifthdGroup" role="tab" aria-controls="list-fifthdGroup" class="list-group-item list-group-item-action for_preventDefault link-secondary"><div class="ch_and_time d-flex justify-content-between">
+                    <a id="list-fifthdGroup-list" data-bs-toggle="list" href="#list-fifthdGroup" role="tab" aria-controls="list-fifthdGroup" class="list-group-item list-group-item-action  border "><div class="ch_and_time d-flex justify-content-between">
                         <h3>Final Assignment</h3>
                         <sapn>19 hrs ago</sapn>
                     </div>
